# speechRecognitionML

./: README.md  pyproject.toml
data/: README.md  extract_audio_features.py
data/audio/live/: David_test.m4a
data/audio/processed/: audio_features.csv
data/audio/raw/Dan/: Dan.m4a
data/audio/raw/David/: David.m4a
data/audio/raw/Drake/: Drake.m4a
data/audio/raw/Lisa/: Lisa.m4a
data/audio/raw/Melissa/: Melissa.m4a
notebooks/: speech_rec.ipynb  speech_rec_model.pkl
scripts/: extract_audio_features.py  live_demo.py  m4a_2_wav.sh  predict_demo.py  test.py
src/: convert_to_wav.sh
src/speech_recognition/: __main__.py
src/speech_recognition/model/: model.py
src/speech_recognition/utils/: audio_stream.py  example_util.py  extract_audio_features.py  record_audio.py  window.py
