[project]
name = "speechrecognitionml"
version = "0.1.0"
description = "biometric speech recognition classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "numpy",
    "librosa",
]
